MDEV-8281 aes_decrypt crashes in block_crypt()

fix aes_decrypt of yassl to support zero-length input